<resources>
    <string name="app_name">SoliceServices</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_searchable_activity">Buscar categorias</string>

    <string name="msg_error_field_required">Campo obrigatório</string>
    <string name="msg_error_email_invalid">Email inválido</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="phone">Telefone</string>
    <string name="advance">Avançar</string>
    <string name="profile_first_name">Primeiro Nome</string>
    <string name="profile_last_name">Sobrenome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Registrar</string>
    <string name="forgot_password">Esqueceu a senha ?</string>

    <string name="action_sign_up_short">Registrar</string>
    <string name="profile_hint_email">joao@exemplo.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="text_header_professionals">Profissionais</string>

    <plurals name="text_footer_professionals">
        <item quantity="one">1 profissional</item>
        <item quantity="other">%d profissionais</item>
    </plurals>

    <string name="texto_cabecalho">Categorias</string>
    <string name="nenhum_carro">Nenhuma categoria cadastrada</string>
    <string name="app_label">Solicite Service</string>
    <string name="search_hint">Pesquisar categorias</string>
    <string name="title_activity_transition">Transição</string>
    <string name="action_second_activity">Segundo menu</string>
    <string name="action_transition_activity">Transição</string>

    <plurals name="texto_rodape">
        <item quantity="one">1 categoria</item>
        <item quantity="other">%d categorias</item>
    </plurals>

    <string-array name="categorias">
        <item>Eletricista</item>
        <item>Encanador</item>
        <item>Pedreiro</item>
        <item>Limpeza</item>
        <item>Transportador</item>
    </string-array>
</resources>
