<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gleilson.soliceservices.SignInActivity">

    <TextView
        android:text="@string/title_login"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/activity_sign_in_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/activity_sign_in_edt_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:background="#000"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        android:id="@+id/activity_sign_in_action_login"/>

    <TextView
        android:id="@+id/activity_sign_in_action_forgot_password"
        android:textStyle="italic"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1aaaf7"/>

</LinearLayout>
