<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gleilson.soliceservices.SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/title_sign_up"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/profile_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/activity_sign_up_edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName" />

        <TextView
            android:layout_alignParentRight="true"
            android:text="@string/profile_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/activity_sign_up_edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textPersonName"/>

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/activity_sign_up_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

        <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/activity_sign_up_edt_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/activity_sign_up_edt_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/activity_sign_up_btn_create_account"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            android:background="#000"
            android:text="@string/advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>